Update and rename assets/search.config.js to _includes/search.config

--- a/_includes/search.config
+++ b/_includes/search.config
@@ -1,8 +1,15 @@
+---
+---
+
+<script>
+
 SimpleJekyllSearch({
   searchInput: document.getElementById('search-input'),
   resultsContainer: document.getElementById('results-container'),
-  json: '/jekyll-search/search.json',
+  json: '{{site.baseurl}}/search.json',
   // searchResultTemplate: '<li><a href="{url}"><p>{title}</p></a></li>',
-  searchResultTemplate: '<li><a href="{url}"><p><option>{title}</option></p></a></li>',
+  searchResultTemplate: '<li><a href="{url}{{site.baseurl}}"><p><option>{title}</option></p></a></li>',
   noResultsText: 'No results found' 
 })
+
+</script>
