--- a/_includes/search.config
+++ b/_includes/search.config
@@ -8,7 +8,7 @@ SimpleJekyllSearch({
   resultsContainer: document.getElementById('results-container'),
   json: '{{site.baseurl}}/search.json',
   // searchResultTemplate: '<li><a href="{url}"><p>{title}</p></a></li>',
-  searchResultTemplate: '<li><a href="{url}{{site.baseurl}}"><p><option>{title}</option></p></a></li>',
+  searchResultTemplate: '<li><a href="{{site.baseurl}}{url}"><p><option>{title}</option></p></a></li>',
   noResultsText: 'No results found' 
 })
 
